# active_graph_slam

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin
devel/.private/catkin_simple/lib/pkgconfig/: catkin_simple.pc
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/graphD_exploration/: .catkin  local_setup.sh  setup.sh
devel/.private/graphD_exploration/include/graphD_exploration/: PointArray.h
devel/.private/graphD_exploration/lib/graphD_exploration/: d_opt_global_rrt_detector  d_opt_local_rrt_detector
devel/.private/graphD_exploration/lib/pkgconfig/: graphD_exploration.pc
devel/.private/graph_d_exploration/: .rosinstall  local_setup.sh  setup.sh
devel/.private/graph_d_exploration/include/graph_d_exploration/: PointArray.h  informationGainConfig.h
devel/.private/kobuki_plugins/: .catkin  setup.sh
devel/.private/open_karto/: .catkin  .rosinstall  setup.sh
devel/.private/rrt_exploration/: .catkin  .rosinstall  local_setup.sh
devel/.private/slam_karto_g2o/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/graphD_exploration/: PointArray.h  informationGainConfig.h
devel/include/graph_d_exploration/: PointArray.h  informationGainConfig.h
devel/include/rrt_exploration/: PointArray.h
devel/lib/graphD_exploration/: d_opt_global_rrt_detector  d_opt_local_rrt_detector
devel/lib/graph_d_exploration/: d_opt_global_rrt_detector  d_opt_local_rrt_detector
devel/lib/pkgconfig/: catkin_simple.pc  catkin_tools_prebuild.pc  graphD_exploration.pc  graph_d_exploration.pc  kobuki_plugins.pc  open_karto.pc  rrt_exploration.pc  slam_karto_g2o.pc
devel/lib/rrt_exploration/: global_rrt_detector  local_rrt_detector
devel/lib/slam_karto_g2o/: slam_karto_g2o
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig-version.cmake  catkin_simpleConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/graphD_exploration/cmake/: graphD_exploration-msg-extras.cmake  graphD_exploration-msg-paths.cmake  graphD_explorationConfig-version.cmake  graphD_explorationConfig.cmake
devel/share/graphD_exploration/docs/: informationGainConfig-usage.dox  informationGainConfig.dox  informationGainConfig.wikidoc
devel/share/graph_d_exploration/cmake/: graph_d_exploration-msg-extras.cmake  graph_d_exploration-msg-paths.cmake  graph_d_explorationConfig-version.cmake  graph_d_explorationConfig.cmake
devel/share/graph_d_exploration/docs/: informationGainConfig-usage.dox  informationGainConfig.dox  informationGainConfig.wikidoc
devel/share/kobuki_plugins/cmake/: kobuki_pluginsConfig-version.cmake  kobuki_pluginsConfig.cmake
devel/share/open_karto/cmake/: open_kartoConfig-version.cmake  open_kartoConfig.cmake
devel/share/rrt_exploration/cmake/: rrt_exploration-msg-extras.cmake  rrt_exploration-msg-paths.cmake  rrt_explorationConfig-version.cmake  rrt_explorationConfig.cmake
devel/share/slam_karto_g2o/cmake/: slam_karto_g2oConfig-version.cmake  slam_karto_g2oConfig.cmake
logs/graphD_exploration/: build.make.000.log.stderr
logs/rrt_exploration/: build.make.000.log.stderr
src/3dParty/kobuki_plugins/: CMakeLists.txt
src/3dParty/navigation/base_local_planner/: CMakeLists.txt
src/3dParty/navigation/clear_costmap_recovery/: CMakeLists.txt
src/3dParty/navigation/costmap_2d/: CMakeLists.txt
src/3dParty/navigation/dwa_local_planner/: CMakeLists.txt
src/3dParty/navigation/global_planner/: CMakeLists.txt
src/3dParty/navigation/map_server/: CMakeLists.txt
src/3dParty/navigation/move_base/: CMakeLists.txt
src/3dParty/navigation/move_slow_and_clear/: CMakeLists.txt
src/3dParty/navigation/nav_core/: CMakeLists.txt
src/3dParty/navigation/navfn/: CMakeLists.txt
src/3dParty/navigation/rotate_recovery/: CMakeLists.txt
src/3dParty/navigation/voxel_grid/: CMakeLists.txt
src/3dParty/open_karto/: CMakeLists.txt
src/3dParty/open_karto/include/open_karto/: Karto.h
src/graph_d_exploration/: CMakeLists.txt  package.xml
src/graph_d_exploration/cfg/: informationGain.cfg
src/graph_d_exploration/include/: functions.h
src/graph_d_exploration/launch/: graph_dopt.launch  single_willowGarage.launch
src/graph_d_exploration/launch/include/: move_baseSafe.launch  robot.launch.xml
src/graph_d_exploration/launch/include/rviz_config/: single.rviz  single_ORB.rviz
src/graph_d_exploration/launch/include/urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro
src/graph_d_exploration/launch/include/worlds/: willowgarage_modified.world
src/graph_d_exploration/param/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapping_karto_g2o.yaml  recovery_behaviors.yaml
src/graph_d_exploration/scripts/: constants.py  controller_graphD.py  filter.py  functions.py  initializer.py  opencv_detector.py  weighted_pose_graph_class.py
src/graph_d_exploration/src/: functions.cpp  global_rrt_detector.cpp  local_rrt_detector.cpp
src/slam_karto_g2o/: CMakeLists.txt
src/slam_karto_g2o/CMakeModules/: FindCholmod.cmake  FindG2O.cmake
src/slam_karto_g2o/include/slam_karto_g2o/: G2OSolver.h
src/slam_karto_g2o/src/: G2OSolver.cpp  slam_karto_g2o.cpp
src/validation/: FRH_P_toro_edges.txt  FRH_P_toro_nodes.txt  FRH_P_toro_opt_nodes.txt  analyze_graph_var_FIM.py  constants.py  utils.py  weighted_pose_graph_class.py
(+97 files in other folders)
